# simple-computer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  code-style.yml
console/: console.c  console.h  pr01.c  printAccumulator.c  printBin.c  printCell.c  printCommand.c  printCounters.c  printDec.c  printDecodedCommand.c  printFlags.c  printHex.c  printOct.c
include/: Enum.h  constants.h  enums.h  myBigChars.h  mySimpleComputer.h  myTerm.h
myBigChars/: bc_bigcharread.cpp  bc_bigcharwrite.cpp  bc_box.c  bc_getbigcharpos.c  bc_printA.c  bc_printbigchar.c  bc_setbigcharpos.c  bc_strlen.c
mySimpleComputer/: sc_accumulatorGet.c  sc_accumulatorInit.c  sc_accumulatorSet.c  sc_commandDecode.c  sc_commandEncode.c  sc_commandValidate.c  sc_commands.h  sc_constants.h  sc_icounterGet.c  sc_icounterInit.c  sc_icounterSet.c  sc_memoryGet.c  sc_memoryInit.c  sc_memoryLoad.c  sc_memorySave.c  sc_memorySet.c  sc_printCell.c  sc_regGet.c  sc_regInit.c  sc_regSet.c  sc_variables.c  sc_variables.h
myTerm/: mt_clrscr.c  mt_constants.h  mt_delline.c  mt_getscreensize.c  mt_gotoXY.c  mt_setbgcolor.c  mt_setcursorvisible.c  mt_setdefaultcolor.c  mt_setfgcolor.c  mt_variables.c  mt_variables.h
